src/main/java/org/example/principles/compositionOverInheritance/good/engine/Engine.java
package org.example.principles.compositionOverInheritance.good.engine;

/**
 * Strategy interface for engine behavior.
 *
 * This hierarchy represents HOW the transport moves.
 */
public interface Engine {
    void move();
}
