src/main/java/org/example/principles/compositionOverInheritance/bad/Truck.java
package org.example.principles.compositionOverInheritance.bad;

/**
 * Represents the vehicle dimension (Truck).
 */
public abstract class Truck extends Transport {
}
